argocd/media-server/profilarr/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profilarr
  labels:
    app: profilarr
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: profilarr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: profilarr
    spec:
      containers:
        - env:
            - name: PUID
              value: "3000"
            - name: PGID
              value: "3000"
            - name: TZ
              value: America/Chicago
            - name: PARSER_HOST
              value: parser
            - name: PARSER_PORT
              value: "5000"
            - name: ORIGIN
              value: https://profilarr.yanello.net
            - name: AUTH
              value: OIDC
          image: harbor.yanello.net/ghcr/dictionarry-hub/profilarr:2.0.8@sha256:bcec9c579358163004145105c2747d3513ae75a56cd8b6c3ac759a0166d5b4af
          imagePullPolicy: IfNotPresent
          name: profilarr
          ports:
            - containerPort: 6868
              protocol: TCP
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
