argocd/media-server/profilarr/manifests/parser-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parser
  labels:
    app: parser
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: parser
  template:
    metadata:
      labels:
        app: parser
    spec:
      containers:
        - image: harbor.yanello.net/ghcr/dictionarry-hub/profilarr-parser:2.0.8@sha256:083a6bcd3234c1eb98cf3a202daa4070cd93fecce08f8cf51e4ab0a035d95a56
          imagePullPolicy: IfNotPresent
          name: parser
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
