argocd/media-server/profilarr/manifests/parser-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parser
  name: parser
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: parser
