argocd/media-server/profilarr/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: profilarr
  name: profilarr
spec:
  ports:
    - name: http
      port: 6868
      targetPort: 6868
  selector:
    app: profilarr
