argocd/media-server/profilarr/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Profilarr
    gethomepage.dev/icon: profilarr
    gethomepage.dev/description: "Profilarr is a custom format and quality profile manager for Radarr and Sonarr."
    gethomepage.dev/pod-selector: app=profilarr
  labels:
    app.kubernetes.io/instance: profilarr-app
  name: profilarr-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - profilarr.yanello.net
  rules:
    - backendRefs:
        - name: profilarr
          namespace: profilarr
          port: 6868
